# agentdbg

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  ruff.toml
.github/: FUNDING.yml
.github/workflows/: codspeed.yml  lint-format.yml
agentdbg/: __init__.py  assertions.py  baseline.py  cli.py  diff.py  exceptions.py  policy.py  server.py  storage.py
agentdbg/_tracing/: _context.py  _lifecycle.py  _redact.py  writer.py
agentdbg/integrations/: langchain.py  openai_agents.py
agentdbg/ui_static/: app.js  index.html  styles.css
docs/: architecture.md  cli.md  getting-started.md  guardrails.md  index.md  integrations.md  regression-testing.md  sdk.md  viewer.md
docs/reference/: policy.md  trace-format.md
implementation_plans/docs/: 001. async-queue-based-event writer.md
scripts/hatch_hooks/: readme_links_rewrite.py
tests/: conftest.py  test_assertions.py  test_baseline.py  test_cli.py  test_diff.py  test_policy.py  test_redaction.py  test_server.py  test_server_path_traversal.py  test_storage.py
tests/benchmarks/: test_bench_events.py  test_bench_guardrails.py  test_bench_loopdetect.py  test_bench_storage.py
tests/integrations/: test_imports.py  test_langchain_integration.py  test_openai_integration.py
tests/tracing/: test_writer.py
